[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/UI/infoPanel.png" type="Texture" id=1]
[ext_resource path="res://Scripts/infoPanel.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/hgssFont.tres" type="BitmapFont" id=3]
[ext_resource path="res://Assets/animalSpriteFrames.tres" type="SpriteFrames" id=4]
[ext_resource path="res://Assets/Sprites/animalShadow.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/genderIcons2.png" type="Texture" id=6]

[node name="InfoPanel" type="Sprite"]
texture = ExtResource( 1 )
centered = false
script = ExtResource( 2 )

[node name="Name" type="RichTextLabel" parent="."]
margin_left = 57.0
margin_top = 15.0
margin_right = 102.0
margin_bottom = 29.0
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]MISO[/center]"
text = "MISO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Species" type="RichTextLabel" parent="."]
margin_left = 8.0
margin_top = 9.0
margin_right = 105.0
margin_bottom = 22.0
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/normal_font = ExtResource( 3 )
text = "SPECIES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeciesText" type="RichTextLabel" parent="."]
margin_left = 8.0
margin_top = 25.0
margin_right = 105.0
margin_bottom = 38.0
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/normal_font = ExtResource( 3 )
text = "Dog"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mood" type="RichTextLabel" parent="."]
margin_left = 8.0
margin_top = 41.0
margin_right = 105.0
margin_bottom = 54.0
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/normal_font = ExtResource( 3 )
text = "MOOD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoodText" type="RichTextLabel" parent="."]
margin_left = 8.0
margin_top = 57.0
margin_right = 105.0
margin_bottom = 70.0
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/normal_font = ExtResource( 3 )
text = "Happy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="RichTextLabel" parent="."]
margin_left = 8.0
margin_top = 73.0
margin_right = 105.0
margin_bottom = 86.0
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/normal_font = ExtResource( 3 )
text = "SYMPTOMS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusText" type="RichTextLabel" parent="."]
margin_left = 8.0
margin_top = 89.0
margin_right = 105.0
margin_bottom = 102.0
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/normal_font = ExtResource( 3 )
tab_size = 2
text = "Limp"

[node name="Affliction" type="RichTextLabel" parent="."]
margin_left = 8.0
margin_top = 105.0
margin_right = 105.0
margin_bottom = 118.0
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/normal_font = ExtResource( 3 )
text = "AFFLICTION"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AfflictionText" type="RichTextLabel" parent="."]
margin_left = 8.0
margin_top = 121.0
margin_right = 105.0
margin_bottom = 134.0
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/normal_font = ExtResource( 3 )
tab_size = 2
text = "Broken leg"

[node name="GenderIcon" type="Sprite" parent="."]
position = Vector2( 92, 33 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 6 )
hframes = 2

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 80, 46 )
texture = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 80, 45 )
frames = ExtResource( 4 )
animation = "cat2"
playing = true
